[tool.poetry]
name = "YingYing"
version = "1.0.0"
description = "一个基于荧荧角色的群聊互动插件，支持多种娱乐、管理和工具功能，增强群聊体验。"
authors = ["shendekoudai <shendekoudai@lovelumine.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/Lovelumine/YingYing"
repository = "https://github.com/Lovelumine/YingYing"
documentation = "https://github.com/Lovelumine/YingYing/wiki"
packages = [
    { include = "yingying" }
]
exclude = ["tests", "deploy"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Lovelumine/YingYing/issues"

[tool.poetry.dependencies]
python = "^3.8.1"
nonebot2 = "^2.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^2.21.0"
pycln = "^2.1.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"

[[tool.poetry.source]]
name = "USTC"
url = "https://pypi.mirrors.ustc.edu.cn/simple"
priority = "default"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
